--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
@@ -215,13 +215,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
+                      Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -230,13 +230,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
+                      Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -245,13 +245,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                      Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
