--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.escaped.html
@@ -437,7 +437,7 @@
       &lt;/div&gt;
       &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
         &lt;div class=&quot;l-main&quot;&gt;
-          &lt;div class='pane--nodefield-innovation-desc pane'&gt;&lt;p&gt;Illness related to breathing smoke causes over 2 million deaths per year, and despite the discomfort and dangers of sustained exposure to smoke, 3 billion people around the work cook on open fires.&lt;/p&gt;&lt;/div&gt;&lt;div class='pane'&gt;&lt;div class='sharethis-buttons'&gt;&lt;a href='#' class='st_sharethis_custom'&gt;Share&lt;/a&gt;&lt;/div&gt;&lt;a href='#' class='button button--flag'&gt;Report&lt;/a&gt;&lt;/div&gt;
+          &lt;div class='pane--nodefield-innovation-desc pane'&gt;&lt;p&gt;Illness related to breathing smoke causes over 2 million deaths per year, and despite the discomfort and dangers of sustained exposure to smoke, 3 billion people around the work cook on open fires.&lt;/p&gt;&lt;/div&gt;&lt;div class='pane pane--button'&gt;&lt;div class='sharethis-buttons'&gt;&lt;a href='#' class='st_sharethis_custom'&gt;Share&lt;/a&gt;&lt;/div&gt;&lt;/div&gt;&lt;div class='pane pane--button'&gt;&lt;span class='flag-wrapper flag-abuse-node'&gt;&lt;a href='#' class='flag-action'&gt;Report&lt;/a&gt;&lt;/span&gt;&lt;/div&gt;
         &lt;/div&gt;
         &lt;aside class=&quot;l-main-sidebar&quot;&gt;
       &lt;div class=&quot;pane pane--favorite-this&quot;&gt;
@@ -639,15 +639,15 @@
               
                 &lt;div class=&quot;field field--innovation-status-update&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Status Update&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-works&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;How it Works&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-evidence&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Evidence it Works&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-proof-evidence&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Proof of Evidence&lt;/h2&gt;
@@ -658,15 +658,15 @@
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-testers&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Current Users / Testers Include&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-impact&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Path and Impact of Scale&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-steps&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Next Steps&lt;/h2&gt;
-                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+                  &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;field field--innovation-news field--border&quot;&gt;
                   &lt;h2 class=&quot;field__label field__label--above&quot;&gt;In the News&lt;/h2&gt;
