--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
@@ -493,7 +493,7 @@
       </div>
       <div class="l-wrapper layout-constrain">
         <div class="l-main">
-          <div class='pane--nodefield-innovation-desc pane'><p>Illness related to breathing smoke causes over 2 million deaths per year, and despite the discomfort and dangers of sustained exposure to smoke, 3 billion people around the work cook on open fires.</p></div><div class='pane'><div class='sharethis-buttons'><a href='#' class='st_sharethis_custom'>Share</a></div><a href='#' class='button button--flag'>Report</a></div>
+          <div class='pane--nodefield-innovation-desc pane'><p>Illness related to breathing smoke causes over 2 million deaths per year, and despite the discomfort and dangers of sustained exposure to smoke, 3 billion people around the work cook on open fires.</p></div><div class='pane pane--button'><div class='sharethis-buttons'><a href='#' class='st_sharethis_custom'>Share</a></div></div><div class='pane pane--button'><span class='flag-wrapper flag-abuse-node'><a href='#' class='flag-action'>Report</a></span></div>
         </div>
         <aside class="l-main-sidebar">
       <div class="pane pane--favorite-this">
